Произвел рефакторинг кода.